JWTfuncionando y tests